--- a/myfamilyreunionsite/index.html
+++ b/myfamilyreunionsite/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Haygood • Davis • Hood • Flemister Family Reunion - Flyer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation-emails/2.4.0/foundation-emails.min.css" integrity="sha512-2OB4tGOAmbOVv7NDnBDwqdY/0fYJP4UijnTCg1ot9ATp8DWyKoT7apZiAvVC3AJ7b7z3SnMTQYP13/AMpmNDlQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
       :root {
         --accent: #2b4b3b;
@@ -172,7 +173,7 @@ form {
         <label for="myFName">*Last Name:</label >
         <input type="text" id="myLName" name="myLName" required aria-required="true" autocomplete="given-name"/>
         <label for="myEmail">*Email:</label>
-        <input type="email" id="myEmail" required aria-required="true" autocomplete="email"/>
+       <input type="email" id="myEmail" name="myEmail" required aria-required="true" autocomplete="email"/>
         <label for="myPhone">*Phone:</label>
         <input type="tel" id="phone" name="myPhone" maxlength="12" autocomplete="tel"/>
         <label for="myArrival">*Arrival Date:</label>
@@ -221,3 +222,4 @@ form {
 
   </body>
 </html>
+
